fix: make it top aligned

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,52 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+
+#root {
+  max-width: 1280px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -60,11 +106,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0;  
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding-top: 3em;
 }
 
 h1 {
